logs/mcviz.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/mcviz'...
Listing './lib/python3.5/site-packages/mcviz/graph'...
Compiling './lib/python3.5/site-packages/mcviz/graph/graph.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (graph.py, line 59)
Listing './lib/python3.5/site-packages/mcviz/graph/loaders'...
Compiling './lib/python3.5/site-packages/mcviz/help.py'...
***   File "./lib/python3.5/site-packages/mcviz/help.py", line 159
    print "Unknown help topic '{0}'. Known topics: {1} (and all tool names)".format(topic, help_topics)
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mcviz/main.py'...
***   File "./lib/python3.5/site-packages/mcviz/main.py", line 51
    except EventParseError, x:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mcviz/tests'...
Compiling './lib/python3.5/site-packages/mcviz/tests/test_graph.py'...
***   File "./lib/python3.5/site-packages/mcviz/tests/test_graph.py", line 93
    print "removing one vertex"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mcviz/tests/test_particle_names.py'...
***   File "./lib/python3.5/site-packages/mcviz/tests/test_particle_names.py", line 14
    print "DIFF:"
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mcviz/tools'...
Listing './lib/python3.5/site-packages/mcviz/tools/annotations'...
Listing './lib/python3.5/site-packages/mcviz/tools/layout_engines'...
Compiling './lib/python3.5/site-packages/mcviz/tools/layout_engines/graphviz.py'...
***   File "./lib/python3.5/site-packages/mcviz/tools/layout_engines/graphviz.py", line 21
    print dot_data
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mcviz/tools/layouts'...
Listing './lib/python3.5/site-packages/mcviz/tools/optionsets'...
Listing './lib/python3.5/site-packages/mcviz/tools/painters'...
Compiling './lib/python3.5/site-packages/mcviz/tools/painters/painters.py'...
***   File "./lib/python3.5/site-packages/mcviz/tools/painters/painters.py", line 19
    print data_string
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mcviz/tools/styles'...
Compiling './lib/python3.5/site-packages/mcviz/tools/tools.py'...
***   File "./lib/python3.5/site-packages/mcviz/tools/tools.py", line 101
    except Exception, x:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mcviz/tools/transforms'...
Compiling './lib/python3.5/site-packages/mcviz/tools/transforms/tagging.py'...
***   File "./lib/python3.5/site-packages/mcviz/tools/transforms/tagging.py", line 26
    print "Converted %i final state particles into %i jets" % (len(final_state_particles), len(jets))
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mcviz/tools/transforms/transforms.py'...
***   File "./lib/python3.5/site-packages/mcviz/tools/transforms/transforms.py", line 138
    print "Converted %i final state particles into %i jets" % (len(final_state_particles), len(jets))
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mcviz/utils'...
Compiling './lib/python3.5/site-packages/mcviz/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/mcviz/utils/__init__.py", line 92
    print latexize_particle_name(r"I am the alpha0 and the Zeta etabar")
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mcviz/utils/demo.py'...
***   File "./lib/python3.5/site-packages/mcviz/utils/demo.py", line 26
    except KeyboardInterrupt, SystemExit:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mcviz/utils/svg'...
Listing './lib/python3.5/site-packages/mcviz/utils/svg/data'...
Compiling './lib/python3.5/site-packages/mcviz/utils/svg/feynman_shapes.py'...
***   File "./lib/python3.5/site-packages/mcviz/utils/svg/feynman_shapes.py", line 495
    print "Written feynman_shapes.svg."
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mcviz/workspace.py'...
***   File "./lib/python3.5/site-packages/mcviz/workspace.py", line 33
    except ArgParseError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mcviz-2014.12.21.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_graph.py'...
***   File "./lib/python3.5/site-packages/tests/test_graph.py", line 93
    print "removing one vertex"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_particle_names.py'...
***   File "./lib/python3.5/site-packages/tests/test_particle_names.py", line 14
    print "DIFF:"
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
